Adding few changes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 server.port=8090
+client.id=<client-id>
+secret.key=<client-secret>
+tenant.id=<tenant-id>
+account.name=<accountname>
+container.name=<container-name>
+account.key=<account-key>
